test/expected/explain_cast_eti.out
explain (extern int)x
                ^
17: error: can not cast into extern
